Closed
Bug 224918
Opened 22 years ago
Closed 22 years ago
closing download window doesn`t stop download
Categories
(SeaMonkey :: Download & File Handling, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: karpieszuk, Unassigned)
Details
Attachments
(1 file)
3.57 KB,
patch
|
Biesinger
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; pl-PL; rv:1.6a) Gecko/20031105
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; pl-PL; rv:1.6a) Gecko/20031105
At some site i clicked link to .rm file. My Mozilla always open for this Real
Player, so after pressing the button I have seen download windows (not download
menager, but simply progress window). After downloading i real player should
start and i should see movie.
I didn`t want to wait (file was to large) and i closed window, but not by
clicking on Cancel button - i press [x] icon on the top right corner of window.
After few minutes real player started and played movie.
I think when i press [x] Mozilla should stop download file
Reproducible: Always
Steps to Reproduce:
![]() |
||
Comment 1•22 years ago
|
||
This behavior was deliberately introduced in bug 143072. Unfortunately, it
seems that the nsDownloadManager::OpenProgressDialogFor is used both for the
normal progress dialog and the DM "properties" window. The two should have
different behavior.
See
http://lxr.mozilla.org/seamonkey/source/xpfe/components/download-manager/src/nsDownloadProxy.h#87
and
http://lxr.mozilla.org/seamonkey/source/xpfe/components/download-manager/resources/downloadmanager.js#209
I think we should pass a boolean to that function indicating the desired
behavior...
Comment 2•22 years ago
|
||
Or we could cheat and use SetCancelDownloadOnClose(!aParent); ;-)
Comment 3•22 years ago
|
||
bz: I thought we had a boolean somewhere to really have that mentioned different
behaviour
![]() |
||
Comment 4•22 years ago
|
||
biesi, we have a boolean in the progress dialog itself. This is the code that
sets that boolean...
Neil, that may be a thought, yes... if it were very clearly documented somewhere
that we do that.
Comment 5•22 years ago
|
||
ah. yeah, now that I follow your links, I see that :)
I kinda prefer passing the value for CancelDownloadOnClose to this function,
rather than doing stuff with aParent...
Comment 6•22 years ago
|
||
Updated•22 years ago
|
Attachment #134936 -
Flags: superreview?(bz-vacation)
Attachment #134936 -
Flags: review?(cbiesinger)
![]() |
||
Comment 7•22 years ago
|
||
Comment on attachment 134936 [details] [diff] [review]
Proposed patch
Looks good.
Attachment #134936 -
Flags: superreview?(bz-vacation) → superreview+
Updated•22 years ago
|
Attachment #134936 -
Flags: review?(cbiesinger) → review+
Comment 8•22 years ago
|
||
Fix checked in.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•