Bug 224918 When not using Download Manager, closing progress dialogs doesn't cancel download r=biesi sr=bz