xpfe/components/download-manager/resources/downloadmanager.js
@@ -206,7 +206,7 @@ var downloadViewController = {
     case "cmd_properties":
       selectedItem = getSelectedItem();
       if (selectedItem && gDownloadManager.getDownload(selectedItem.id))
-        gDownloadManager.openProgressDialogFor(selectedItem.id, window);
+        gDownloadManager.openProgressDialogFor(selectedItem.id, window, false);
       break;
     case "cmd_openfile":
       selectedItem = getSelectedItem();
